Support JEI using only the API (#61)
Cherry-picked from 26.2 (3fb00a68), adapted to 1.21.1 / JEI 19.51.0.417:
- JEI is runtime only now, the compile classpath is the api artifacts alone
- kept RecipeType and ResourceLocation, 1.21.1's JEI has no IRecipeType/Identifier
- display overrides go through IIngredientConsumer#addTypedIngredient
- slot tooltips read HoverTooltips#tooltipTexts/#tooltipComponent, this branch
  still has the split tooltip record
- dropped the @NullMarked package-info files, jspecify is not on this classpath
- the jei dependency range comes from the new jei_version_range property